--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,7 @@
         <script src="{{ asset("sklad-express/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js") }}"></script>
         <script src="{{ asset("sklad-express/vendor/parsleyjs/dist/parsley.js") }}"></script>
         <script src="{{ asset("sklad-express/js/app.js") }}"></script>
+        <script src="{{ asset("sklad-express/js/main.js") }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
