--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -20,8 +20,7 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-
-                                            {% if ordersNew %}
+                                            {% if ordersNew is not empty %}
                                                 {% for order in ordersNew %}
                                                     <tr>
                                                             <td>
@@ -44,7 +43,7 @@
                         <div class="col-xl-6">
                             <!-- START card-->
                             <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success"> Вiдправлення (0)</div></div>
+                                <div class="card-header"><div class="float-left badge badge-success">{{ "Sent Orders"|trans }}</div></div>
                                 <div class="card-body">
                                     <!-- START table-responsive-->
                                     <div class="table-responsive">
@@ -61,9 +60,9 @@
                                                 {% if ordersSend %}
                                                     {% for order in ordersSend %}
                                                         <tr>
-                                                            <td>{{ order.trNum }}</td>
+                                                            <td>{{ order.trackingNumber }}</td>
                                                             <td>{{ order.addresses.fullAddress }}</td>
-                                                            <td>{{ order.orderStatus.statuName| trans }}</td>
+                                                            <td>{{ order.orderStatus.statusName| trans }}</td>
                                                         </tr>
                                                     {% endfor %}
                                                 {% else %}
@@ -78,7 +77,7 @@
                         <div class="col-xl-6">
                             <!-- START card-->
                             <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success"> Последние платежи (2)</div></div>
+                                <div class="card-header"><div class="float-left badge badge-success">{{ "Late Payments"|trans }}</div></div>
                                 <div class="card-body">
                                     <!-- START table-responsive-->
                                     <div class="table-responsive">
