fix button payment

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="{{ asset("sklad-express/vendor/weather-icons/css/weather-icons.css") }}"/>
         <link rel="stylesheet" href="{{ asset("sklad-express/css/bootstrap.css") }}" id="bscss" />
         <link rel="stylesheet" href="{{ asset("sklad-express/css/app.css") }}" id="maincss" />
+        <link rel="stylesheet" href="{{ asset("sklad-express/css/custom.css") }}"/>
 
         {% block stylesheets %}{% endblock %}
     </head>
@@ -35,7 +36,7 @@
         <script src="{{ asset("sklad-express/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js") }}"></script>
         <script src="{{ asset("sklad-express/vendor/parsleyjs/dist/parsley.js") }}"></script>
         <script src="{{ asset("sklad-express/js/app.js") }}"></script>
-        <script src="{{ asset("sklad-express/js/main.js") }}"></script>
+        <script src="{{ asset("sklad-express/js/custom.js") }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
