--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -43,11 +43,17 @@
                                     </td>
                                     <td>
                                         {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
-                                            <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Order" | trans }}
-                                            </a>
+                                            <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Order" | trans }}</a>
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
                                             {% if item.shippingCosts > 0 %}
-                                            {% set liqPayForm=liqpay.LiqPayForm(item.shippingCosts,'Pay by ExpreaaPochta.com',"EXPRESSORDER_"~item.id) %}
-                                        {{ liqPayForm | raw }}
+                                                {% set liqPayForm=liqpay.LiqPayForm(item.shippingCosts,'Pay by ExpreaaPochta.com',"EXPRESSORDER_"~item.id) %}
+                                                    <div class="liq-pay-button">
+                                                        {{ liqPayForm | raw }}
+                                                    </div>
+                                                    <input type="button" id="payment-btn" class="btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
                                             {% endif %}
                                         {% endif %}
                                     </td>
