--- a/templates/system/product-order-theme.html.twig
+++ b/templates/system/product-order-theme.html.twig
@@ -9,12 +9,10 @@
 {% endblock %}
 
 {% block OrderProductsFormType_widget %}
-<div class="row justify-content-center align-items-center">
-    <div class="col-md-11">
-        <div class="row justify-content-center align-items-center">
-                <div class="col-md-8">
-                    <div class="form-group">
 
+        <div class="row">
+                <div class="col-8">
+                    <div class="form-group">
                         {{ form_label(form.descEn,"descEn"|trans, {
                             "label_attr": {"class": "text-muted"}
                         }) }}
@@ -60,12 +58,30 @@
                         </div>
                     </div>
                 </div>
-                {{ form_widget(form) }}
+            </div>
+        <div class="row align-items-end">
+            <div class="col-8">
+                <div class="form-group">
+                    {{ form_label(form.descUa,"descUa"|trans, {
+                        "label_attr": {"class": "text-muted"}
+                    }) }}
+                    <div class="input-group with-focus ">
+                        {% if form.descUa.vars.errors|length %}
+                            {{ form_widget(form.descUa, {"attr": {"class": "is-invalid form-control"}}) }}
+                        {% else %}
+                            {{ form_widget(form.descUa) }}
+                        {% endif %}
+                        <div class="invalid-feedback">{{ form_errors(form.descUa) }}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="offset-2 col-2">
+                <div class="form-group">
+                    <a href="#" class="collection-remove btn btn-danger">{{ "Remove product" | trans }}</a>
+                    <a href="#" class="collection-add btn btn-success">{{ "Add product" | trans }}</a>
+                </div>
             </div>
         </div>
-    <div class="col-md-1">
-        <a href="#" class="collection-remove btn btn-danger">{{ "Remove product" | trans }}</a>
-        <a href="#" class="collection-add btn btn-success">{{ "Add product" | trans }}</a>
-    </div>
-</div>
+    {{ form_widget(form) }}
+
 {% endblock %}
