--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -233,10 +233,10 @@
                         </div>
                     </div>
                         <div class="row">
-                             <div class="col-md-3">
+                             <div class="offset-4 col-md-2">
                                    {{ form_widget(form.save) }}
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <a href="{{ path("post_parcels") }}" class="btn btn-secondary btn-block mt-3"> {{ "Cancel" | trans }}</a>
                             </div>
                         </div>
