--- a/templates/cabinet/profile/edit_form.html.twig
+++ b/templates/cabinet/profile/edit_form.html.twig
@@ -23,35 +23,12 @@
         {% endif %}
         {{ form_start(addressForm, {"action": path("post_profile_from_address"), "method": "POST", "attr": {"id": "addressForm","class":"mb-3"}}) }}
         <div class="card card-default">
-            <div class="card-header d-flex align-items-center">
+            <div class="card-header d-flex">
                 <div class="d-flex justify-content-center col">
-                    <div class="h4 m-0 text-center">{{ "Data about the address delivery"|trans }}</div>
+                    <div class="h4 m-0">{{ "Data about the address delivery"|trans }}</div>
                 </div>
             </div>
             <div class="card-body">
-{#                <div class="row py-4 justify-content-center">#}
-{#                    <div class="col-4 col-sm-12">#}
-{#                        <div class="form-group">#}
-{#                            <div class="h6 m-0">{{ "Choise delivery method"|trans }}</div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                    <div class="col-12 col-sm-12">#}
-{#                        <div class="form-group">#}
-{#                            <div class="form-check form-check-inline">#}
-{#                                <input class="form-check-input" id="inlineRadio1"#}
-{#                                       type="radio" name="inlineRadioOptions"#}
-{#                                       value="option1">#}
-{#                                <label class="form-check-label" for="inlineRadio1">1</label>#}
-{#                            </div>#}
-{#                            <div class="form-check form-check-inline">#}
-{#                                <input class="form-check-input" id="inlineRadio2"#}
-{#                                       type="radio" name="inlineRadioOptions"#}
-{#                                       value="option2">#}
-{#                                <label class="form-check-label" for="inlineRadio2">2</label>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
                 <div class="row py-4 justify-content-center">
                     <div class="col-4 col-sm-4">
                         <div class="form-group">
