--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -18,10 +18,13 @@
                                     <div class="table-responsive">
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
-                                            <tr>
-                                               <th>{{ "User Name" | trans }}</th>
-                                               <th>{{ "Country" | trans }}</th>
-                                               <th>{{ "Adress" | trans }}</th>
+                                            <tr class="text-center">
+                                                <th>{{ "Description" | trans }}</th>
+                                                <th>{{ "Adress" | trans }}</th>
+                                                <th>{{ "Recipient" | trans }}</th>
+                                                <th>{{ "Phone" | trans }}</th>
+                                                <th>{{ "Status" | trans }}</th>
+                                                <th></th>
                                                 <th></th>
                                             </tr>
                                             </thead>
@@ -29,11 +32,37 @@
                                             {% if items is defined and items is iterable  %}
                                                 {% for item in items %}
                                                  <tr>
-                                                    <td>{{ item.fullName }}</td>
-                                                    <td>{{ item.country }}</td>
-                                                    <td>{{ item.fullAddress }}</td>
                                                      <td>
-                                                        <a  href="{{ path("post_address_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Address" | trans }}</a>
+                                                         {{ item.userFirstName}} {{ item.userLastName }}
+                                                         <br>
+                                                         {{ item.country}}, {{ item.city }}
+                                                     </td>
+                                                     <td>
+                                                         {% if  item.street %}
+                                                             {{ item.street }} ул.,
+                                                         {% endif %}
+                                                         {% if  item.house %}
+                                                             д.{{ item.house }},
+                                                         {% endif %}
+                                                         {% if  item.apartment %}
+                                                             кв. {{ item.apartment }},
+                                                         {% endif %}
+                                                         {% if  item.zip %}
+                                                             {{ item.zip }}
+                                                         {% endif %}
+                                                     </td>
+                                                     <td>{{ item.userFirstName}} {{ item.userLastName }}</td>
+                                                     <td>{{ item.phone }}</td>
+                                                     {% if  item.isConfirmed %}
+                                                        <td class="text-center">{{ "Confirmed" | trans }}</td>
+                                                     {% else %}
+                                                         <td class="text-center">{{ "Not Confirmed" | trans }}</td>
+                                                     {% endif %}
+                                                     <td>
+                                                        <a  href="{{ path("post_address_edit",{"id":item.id}) }}" class="btn btn-success">{{ "EditAddress" | trans }}</a>
+                                                     </td>
+                                                     <td>
+                                                         <a  href="{{ path("post_address_delete",{"id":item.id}) }}" class="btn btn-danger">{{ "DeleteAddress" | trans }}</a>
                                                      </td>
                                                  </tr>
                                                 {% endfor %}
