--- a/templates/cabinet/sidebar/topsearch.html.twig
+++ b/templates/cabinet/sidebar/topsearch.html.twig
@@ -1,5 +1,5 @@
 <!-- START Search form-->
-<form class="navbar-form" role="search" action="search.html">
+<form class="navbar-form" role="search" action="{{ path("post_find") }}">
     <div class="form-group"><input class="form-control" type="text" placeholder="{{ "Type and hit enter ..."| trans }}">
         <div class="fas fa-times navbar-form-close" data-search-dismiss=""></div>
     </div><button class="d-none" type="submit">Submit</button>
