--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -56,7 +56,7 @@
                                                     <div class="liq-pay-button">
                                                         {{ liqPayForm | raw }}
                                                     </div>
-                                                    <input type="button" id="payment-btn" class="btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
+                                                    <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
                                             {% endif %}
                                         {% endif %}
                                     </td>
