--- a/templates/cabinet/find/index.html.twig
+++ b/templates/cabinet/find/index.html.twig
@@ -23,12 +23,28 @@
                         </thead>
                         <tbody>
                         {% if items is defined and items is iterable  and  items is not empty %}
-                            {% for item in items %}
+                            {% for itemCriers in items %}
+                                {% for item in itemCriers %}
+                                {% if item is not empty %}
                                 <tr>
-                                    <td>{{ item.Date }}</td>
-                                    <td>{{ item.StatusDescription }}</td>
-                                    <td>{{ item.Details }}</td>
+                                    <td>
+                                    {% if item.Date is defined %}
+                                        {{ item.Date }}
+                                    {% endif %}
+                                    </td>
+                                    <td>
+                                    {% if item.StatusDescription is defined %}
+                                            {{ item.StatusDescription }}
+                                    {% endif %}
+                                    </td>
+                                    <td>
+                                    {% if item.Details is defined %}
+                                            {{ item.Details }}
+                                    {% endif %}
+                                    </td>
                                 </tr>
+                                {% endif %}
+                                {% endfor %}
                             {% endfor %}
 
                         {% else %}
