--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -73,7 +73,7 @@
         <!-- START Dropdown menu-->
         <div class="dropdown-menu dropdown-menu-right animated flipInX">
             <div class="dropdown-item">
-                <div class="user-block-picture text-center">
+                <div class="row user-block-picture text-center justify-content-center align-items-center ">
                     <div class="user-block-status"><img class="img-thumbnail rounded-circle" src="
                     {% if user.avatar %}
                       {{ asset(user.avatar) }}
