Profile and address

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
         <div class="wrapper">
             {% block body %}{% endblock %}
         </div>
-
+        {% block modal %}{% endblock %}
         <script src="{{ asset("sklad-express/vendor/modernizr/modernizr.custom.js") }}"></script>
         <script src="{{ asset("sklad-express/vendor/js-storage/js.storage.js") }}"></script>
         <script src="{{ asset("sklad-express/vendor/i18next/i18next.js") }}"></script>
