--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -94,7 +94,7 @@
                                         {{ form_widget(form.addresses) }}
                                     {% endif %}
                                     <div class="input-group-append">
-                                        <a  href="{{ path("post_address_create") }}" target="_blank" class="btn btn-info btn-sm">{{ "Add Address" | trans }}
+                                        <a  id="addAddress" href="#" asss="{{ path("post_address_create") }}" {#target="_blank"#} class="btn btn-info btn-sm">{{ "Add Address" | trans }}
                                         </a>
                                     </div>
                                     <div class="invalid-feedback">{{ form_errors(form.addresses) }}</div>
@@ -248,6 +248,32 @@
 
 
 {% endblock %}
+ {% block modal %}
+     {# Modal add address #}
+     <div class="modal fade" id="addAddressForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
+             <div class="modal-content">
+                 <div class="modal-header">
+                     <h5 class="modal-title" id="exampleModalLabel">{{ "Data about the address delivery"|trans }}</h5>
+                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                         <span aria-hidden="true">&times;</span>
+                     </button>
+                 </div>
+                 <div class="modal-body">
+                     <div class="d-flex justify-content-center">
+                         <div class="spinner-border" role="status">
+                             <span class="sr-only">{{ "Loading..." | trans }}</span>
+                         </div>
+                     </div>
+                 </div>
+                 <div class="modal-footer">
+                     <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ "Close" | trans }}</button>
+                     <button type="button" id="saveaddress" class="btn btn-primary">{{ "Save changes" | trans }}</button>
+                 </div>
+             </div>
+         </div>
+     </div>
+ {% endblock %}
  {% block javascripts %}
      <script src="{{ asset("sklad-express/js/jquery.collection.js") }}"></script>
 <script>
@@ -265,6 +291,69 @@
         "add_at_the_end": true
      });
 
+     $(document).ready(function(){
+         $('body').on('click','#addAddress',function(){
 
+             $('#addAddressForm .modal-body').html('<div class="d-flex justify-content-center">' +
+                 '<div class="spinner-border" role="status">'+
+                 '<span class="sr-only">{{ "Loading..." | trans }}</span>'+
+                 '</div></div>');
+
+             $('#addAddressForm .modal-body').load('{{ path("ajax_post_address_create") }}',function(result){
+                 $('#addAddressForm').modal({show:true});
+             });
+             $('#addAddressForm').modal({show:true});
+             console.log($('#addAddressForm .modal-body'));return false;
+
+
+         });
+
+         $('body').on('click','#saveaddress',function(){
+             var senddata=$("#addressForm").serialize();
+             $.ajax({
+                 url: '{{ path("ajax_post_address_create") }}',
+                 type: 'POST',
+                 data: senddata,
+                 success: function(mess) {
+                     if (mess && typeof mess === "object") {
+                         console.log(mess);
+                         $('option', $("#order_form_addresses")).remove();
+                         $.each(mess, function(key, value) {
+                             console.log(value);
+                             $('#order_form_addresses').append('<option value="' + key + '">' + value + '</option>');
+                         });
+                         $('#order_form_addresses').prop('selected', true);
+                         $('#addAddressForm').modal('hide');
+                     }
+                    else{
+                         $('#addAddressForm .modal-body').html(mess);
+                     }
+
+                     //$('#myModal').modal('hide');
+                 },
+                 error:function(mess) {
+                     console.log(mess);
+                 }
+             })
+         });
+
+
+
+         {#
+         $("#save").click(function(){
+             $.ajax({
+                 url: '{{ path{"ajax_post_address_create"} }}',
+                 type: 'POST',
+                 success: function(res) {
+                     $('#myModal').modal('hide');
+                 },
+                 error: function(error) {
+                     $('#myModal').modal('hide');
+                     console.log(error);
+                 }
+             })
+         });
+         #}
+     });
 </script>
  {% endblock %}
