Profile and address

--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -279,7 +279,8 @@
 <script>
      jQuery(".datepicker").datepicker({
         uiLibrary: "bootstrap4",
-        autoclose: true
+        autoclose: true,
+        language: 'ru'
      });
 
 
