--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -141,7 +141,6 @@
                                 <div class="invalid-feedback">{{ form_errors(profileForm.email) }}</div>
                             </div>
                         </div>
-
                         <div class="row py-4 justify-content-center">
                             <div class="col-4 col-sm-4">
                                 <div class="form-group">
@@ -185,51 +184,6 @@
                             </div>
                             <div class="col-4 col-sm-4">
                                 <div class="form-group">
-                                    {{ form_label(profileForm.regionRayon,"District"|trans, {
-                                        "label_attr": {"class": "text-muted"}
-                                    }) }}
-                                    <div class="input-group with-focus">
-                                        {% if profileForm.regionRayon.vars.errors|length %}
-                                            {{ form_widget(profileForm.regionRayon, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
-                                        {% else %}
-                                            {{ form_widget(profileForm.regionRayon) }}
-                                        {% endif %}
-                                        <div class="input-group-append">
-                             <span class="input-group-text text-muted bg-transparent border-left-0">
-                                 <em class="fa fa-user"></em>
-                             </span>
-                                        </div>
-                                        <div class="invalid-feedback">{{ form_errors(profileForm.regionRayon) }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-                        <div class="row py-4 justify-content-center">
-                            <div class="col-8 col-sm-8">
-                                <div class="form-group">
-                                    {{ form_label(profileForm.country,"City"|trans, {
-                                        "label_attr": {"class": "text-muted"}
-                                    }) }}
-                                    <div class="input-group with-focus">
-                                        {% if profileForm.city.vars.errors|length %}
-                                            {{ form_widget(profileForm.city, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
-                                        {% else %}
-                                            {{ form_widget(profileForm.city) }}
-                                        {% endif %}
-                                        <div class="input-group-append">
-                             <span class="input-group-text text-muted bg-transparent border-left-0">
-                                 <em class="fa fa-user"></em>
-                             </span>
-                                        </div>
-                                        <div class="invalid-feedback">{{ form_errors(profileForm.city) }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-4 col-sm-4">
-                                <div class="form-group">
                                     {{ form_label(profileForm.regionOblast,"ZIP"|trans, {
                                         "label_attr": {"class": "text-muted"}
                                     }) }}
@@ -250,6 +204,26 @@
                             </div>
                         </div>
                         <div class="row py-4 justify-content-center">
+                            <div class="col-4 col-sm-4">
+                                <div class="form-group">
+                                    {{ form_label(profileForm.city,"City"|trans, {
+                                        "label_attr": {"class": "text-muted"}
+                                    }) }}
+                                    <div class="input-group with-focus">
+                                        {% if profileForm.city.vars.errors|length %}
+                                            {{ form_widget(profileForm.city, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
+                                        {% else %}
+                                            {{ form_widget(profileForm.city) }}
+                                        {% endif %}
+                                        <div class="input-group-append">
+                             <span class="input-group-text text-muted bg-transparent border-left-0">
+                                 <em class="fa fa-user"></em>
+                             </span>
+                                        </div>
+                                        <div class="invalid-feedback">{{ form_errors(profileForm.city) }}</div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-4 col-sm-4">
                                 <div class="form-group">
                                     {{ form_label(profileForm.street,"Street"|trans, {
@@ -287,26 +261,6 @@
                              </span>
                                         </div>
                                         <div class="invalid-feedback">{{ form_errors(profileForm.house) }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-4 col-sm-4">
-                                <div class="form-group">
-                                    {{ form_label(profileForm.apartment,"Number of apartment"|trans, {
-                                        "label_attr": {"class": "text-muted"}
-                                    }) }}
-                                    <div class="input-group with-focus">
-                                        {% if profileForm.apartment.vars.errors|length %}
-                                            {{ form_widget(profileForm.apartment, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
-                                        {% else %}
-                                            {{ form_widget(profileForm.apartment) }}
-                                        {% endif %}
-                                        <div class="input-group-append">
-                             <span class="input-group-text text-muted bg-transparent border-left-0">
-                                 <em class="fa fa-user"></em>
-                             </span>
-                                        </div>
-                                        <div class="invalid-feedback">{{ form_errors(profileForm.apartment) }}</div>
                                     </div>
                                 </div>
                             </div>
