--- a/templates/system/product-order-theme.html.twig
+++ b/templates/system/product-order-theme.html.twig
@@ -9,79 +9,90 @@
 {% endblock %}
 
 {% block OrderProductsFormType_widget %}
-
-        <div class="row">
-                <div class="col-8">
-                    <div class="form-group">
-                        {{ form_label(form.descEn,"descEn"|trans, {
-                            "label_attr": {"class": "text-muted"}
-                        }) }}
-                        <div class="input-group with-focus ">
-                            {% if form.descEn.vars.errors|length %}
-                                {{ form_widget(form.descEn, {"attr": {"class": "is-invalid form-control"}}) }}
-                            {% else %}
-                                {{ form_widget(form.descEn) }}
-                            {% endif %}
-                            <div class="invalid-feedback">{{ form_errors(form.descEn) }}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-
-                        {{ form_label(form.price,"price"|trans, {
-                            "label_attr": {"class": "text-muted"}
-                        }) }}
-                        <div class="input-group with-focus ">
-                            {% if form.price.vars.errors|length %}
-                                {{ form_widget(form.price, {"attr": {"class": "is-invalid form-control"}}) }}
-                            {% else %}
-                                {{ form_widget(form.price) }}
-                            {% endif %}
-                            <div class="invalid-feedback">{{ form_errors(form.price) }}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-
-                        {{ form_label(form.count,"count"|trans, {
-                            "label_attr": {"class": "text-muted"}
-                        }) }}
-                        <div class="input-group with-focus ">
-                            {% if form.price.vars.errors|length %}
-                                {{ form_widget(form.count, {"attr": {"class": "is-invalid form-control"}}) }}
-                            {% else %}
-                                {{ form_widget(form.count) }}
-                            {% endif %}
-                            <div class="invalid-feedback">{{ form_errors(form.count) }}</div>
-                        </div>
-                    </div>
+        <div class="row align-items-end">
+            <div class="col-3">
+                <div class="form-group">
+                    {{ form_label(form.descEn,"descEn"|trans, {"label_attr": {"class": "text-muted"}}) }}
                 </div>
             </div>
-        <div class="row align-items-end">
-            <div class="col-8">
+            <div class="col-3">
                 <div class="form-group">
                     {{ form_label(form.descUa,"descUa"|trans, {
                         "label_attr": {"class": "text-muted"}
                     }) }}
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    {{ form_label(form.price,"price"|trans, {
+                        "label_attr": {"class": "text-muted"}
+                    }) }}
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    {{ form_label(form.count,"count"|trans, {
+                        "label_attr": {"class": "text-muted"}
+                    }) }}
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-3">
+                <div class="form-group">
                     <div class="input-group with-focus ">
-                        {% if form.descUa.vars.errors|length %}
-                            {{ form_widget(form.descUa, {"attr": {"class": "is-invalid form-control"}}) }}
+                        {% if form.descEn.vars.errors|length %}
+                            {{ form_widget(form.descEn, {"attr": {"class": "is-invalid form-control"}}) }}
                         {% else %}
-                            {{ form_widget(form.descUa) }}
+                            {{ form_widget(form.descEn) }}
                         {% endif %}
-                        <div class="invalid-feedback">{{ form_errors(form.descUa) }}</div>
+                        <div class="invalid-feedback">{{ form_errors(form.descEn) }}</div>
                     </div>
                 </div>
             </div>
-            <div class="offset-2 col-2">
+            <div class="col-3">
                 <div class="form-group">
-                    <a href="#" class="collection-remove btn btn-danger">{{ "Remove product" | trans }}</a>
-                    <a href="#" class="collection-add btn btn-success">{{ "Add product" | trans }}</a>
+                <div class="input-group with-focus ">
+                    {% if form.descUa.vars.errors|length %}
+                        {{ form_widget(form.descUa, {"attr": {"class": "is-invalid form-control"}}) }}
+                    {% else %}
+                        {{ form_widget(form.descUa) }}
+                    {% endif %}
+                    <div class="invalid-feedback">{{ form_errors(form.descUa) }}</div>
                 </div>
             </div>
         </div>
-    {{ form_widget(form) }}
-
+            <div class="col-2">
+                <div class="form-group">
+                    <div class="input-group with-focus ">
+                        {% if form.price.vars.errors|length %}
+                            {{ form_widget(form.price, {"attr": {"class": "is-invalid form-control"}}) }}
+                        {% else %}
+                            {{ form_widget(form.price) }}
+                        {% endif %}
+                        <div class="invalid-feedback">{{ form_errors(form.price) }}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    <div class="input-group with-focus ">
+                        {% if form.price.vars.errors|length %}
+                            {{ form_widget(form.count, {"attr": {"class": "is-invalid form-control"}}) }}
+                        {% else %}
+                            {{ form_widget(form.count) }}
+                        {% endif %}
+                        <div class="invalid-feedback">{{ form_errors(form.count) }}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2">
+                    <div class="form-group">
+                        <a href="#" class="collection-remove btn btn-danger">{{ "Remove product" | trans }}</a>
+{#                        <a href="#" class="collection-add btn btn-success">{{ "Add product" | trans }}</a>#}
+                    </div>
+                </div>
+        </div>
+        {{ form_widget(form) }}
 {% endblock %}
